// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="text"
  width="100%"
>
  <styled.input
    data-e2e="defaultInput"
    disabled={false}
    type="text"
    width="100%"
  >
    <input
      className="c0"
      data-e2e="defaultInput"
      disabled={false}
      type="text"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with disabled 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

<Input
  disabled={true}
  type="text"
  width="100%"
>
  <styled.input
    data-e2e="defaultInput"
    disabled={true}
    type="text"
    width="100%"
  >
    <input
      className="c0"
      data-e2e="defaultInput"
      disabled={true}
      type="text"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with type 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="password"
  width="100%"
>
  <styled.input
    data-e2e="defaultInput"
    disabled={false}
    type="password"
    width="100%"
  >
    <input
      className="c0"
      data-e2e="defaultInput"
      disabled={false}
      type="password"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with width 1`] = `
.c0 {
  display: block;
  width: 200px;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="text"
  width="200px"
>
  <styled.input
    data-e2e="defaultInput"
    disabled={false}
    type="text"
    width="200px"
  >
    <input
      className="c0"
      data-e2e="defaultInput"
      disabled={false}
      type="text"
      width="200px"
    />
  </styled.input>
</Input>
`;
